src/test/ui/lifetime-errors/ex3-both-anon-regions-4.stderr
error[E0623]: lifetime mismatch
  --> src/test/ui/lifetime-errors/ex3-both-anon-regions-4.rs:12:9
   |
11 | fn foo((v, w): (&u8, &u8), x: &u8) {
   |                 ---           --- these references must have the same lifetime
12 |     v = x;
   |         ^ data from `x` flows  here

error: aborting due to previous error
